[project]
name = "network_events"
version = "0.1.0"
description = "Study-specific behavioral + BIDS event-generation pipeline for the r01network project (raw jsPsych CSV -> sourcedata + _events.tsv + QC + trim)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "pandas"]

[project.scripts]
network-events = "network_events.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_events"]

[tool.pytest.ini_options]
testpaths = ["tests"]
